--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "type": "module",
   "homepage": "https://github.com/IvanBaryutin/frontend-project-46#readme",
   "dependencies": {
-    "commander": "^9.4.1"
+    "commander": "^9.4.1",
+    "lodash": "^4.17.21"
   }
 }
