--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "url": "https://github.com/IvanBaryutin/frontend-project-46/issues"
   },
   "type": "module",
+  "bin": {
+    "gendiff": "bin/gendiff.js"
+  },
   "homepage": "https://github.com/IvanBaryutin/frontend-project-46#readme",
   "dependencies": {
     "commander": "^9.4.1",
