--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "[![Actions Status](https://github.com/IvanBaryutin/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/IvanBaryutin/frontend-project-46/actions)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
+  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/IvanBaryutin/frontend-project-46.git"
@@ -27,6 +28,7 @@
   "devDependencies": {
     "eslint": "^8.26.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "jest": "^29.2.2"
   }
 }
