--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "jest"
   },
-  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/IvanBaryutin/frontend-project-46.git"
@@ -23,6 +22,7 @@
   "homepage": "https://github.com/IvanBaryutin/frontend-project-46#readme",
   "dependencies": {
     "commander": "^9.4.1",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
