--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,7 +1,7 @@
 env:
-  browser: true
   es2021: true
   jest: true
+  node: true
 extends: airbnb-base
 overrides: []
 parserOptions:
@@ -10,5 +10,5 @@ parserOptions:
 rules: {
   'no-console': 'off',
   'import/extensions' : 'off',
-  'no-underscore-dangle': [2, { "allow": ["__filename", "__dirname"] }] # разрешает подчёркивание в именах только для двух констант
+  'no-underscore-dangle': [2, { "allow": ["__filename", "__dirname"] }]
 }
